--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calcolatore Calorie MET</title>
+    <title>Calcolatore Calorie Personalizzato</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -16,18 +16,16 @@
                 <input type="number" id="peso" class="form-control" placeholder="Inserisci il tuo peso">
             </div>
             <div class="mb-3">
-                <label for="attivita" class="form-label">Tipo di Attività</label>
-                <select id="attivita" class="form-select">
-                    <option value="3.5">Camminata lenta (3.5 MET)</option>
-                    <option value="6">Corsa leggera (6 MET)</option>
-                    <option value="8">Ciclismo moderato (8 MET)</option>
-                    <option value="10">Nuoto (10 MET)</option>
-                    <option value="15">Salto con la corda (15 MET)</option>
-                </select>
+                <label for="distanza" class="form-label">Distanza percorsa (km)</label>
+                <input type="number" id="distanza" class="form-control" placeholder="Inserisci la distanza">
             </div>
             <div class="mb-3">
                 <label for="durata" class="form-label">Durata (minuti)</label>
                 <input type="number" id="durata" class="form-control" placeholder="Inserisci la durata">
+            </div>
+            <div class="mb-3">
+                <label for="pendenza" class="form-label">Pendenza (%)</label>
+                <input type="number" id="pendenza" class="form-control" placeholder="Inserisci la pendenza (0 se pianura)">
             </div>
             <button class="btn btn-primary w-100" onclick="calcolaCalorie()">Calcola</button>
             <h3 class="mt-3 text-center" id="risultato"></h3>
