--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calcolatore Calorie Personalizzato</title>
+    <title>Calcolatore Calorie Personalizzato per Giulia</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container mt-5">
-        <h2 class="text-center">Calcolatore di Calorie Bruciate</h2>
+        <h2 class="text-center">Calcolatore di Calorie Bruciate per Giulia</h2>
         <div class="card p-4 mt-3">
             <div class="mb-3">
                 <label for="peso" class="form-label">Peso (kg)</label>
